<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:fontFamily="sans-serif-light"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="PC 4 HIRE"
        android:layout_marginTop="-100dp"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        android:paddingLeft="6dp" />

    <EditText
        android:fontFamily="sans-serif"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:background="@drawable/edittextlight"
        android:id="@+id/username"
        android:hint="Username"
        android:textSize="15sp"
        android:singleLine="false" />

    <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextdark"
            android:text="LOG  IN"
            android:onClick=""
            android:id="@+id/login"
            android:fontFamily="sans-serif-light"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#616161"
        android:text="New User? Sign Up"
        android:id="@+id/newUser"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textSize="13sp" />

</LinearLayout>