<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MyComputers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="RECEIVED BIDS"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif-light"
        android:textSize="26sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myitemsbidlist"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:smoothScrollbar="true" />
</RelativeLayout>
